# EstraIME

./: Directory.Build.props  EstraIME.sln  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
artifacts/cargo-installer-target/: .rustc_info.json
artifacts/cargo-installer-target/debug/: libconfig_store.d  libprovider_api.d  libprovider_api.rlib  libprovider_cloud_stub.d  libprovider_cloud_stub.rlib  libprovider_llama_cpp.d  libprovider_mock.d  sidecar-daemon.d
artifacts/cargo-installer-target/release/: sidecar-daemon.d
artifacts/installer/: Bundle.wixobj  EstraIME-Alpha.msi  EstraIME-Alpha.wixpdb  Product.wixobj
data/seed/: README.md  base_lexicon_seed.tsv
docs/: alpha-milestones.md  architecture.md  known-limitations.md  licensing.md  tsf-integration.md
installer/assets/: ime-config.default.json
installer/wix/: Bundle.wxs  Product.wxs
shared/schema/: ime-config.schema.json  ipc.schema.json  model-manifest.schema.json
sidecar/: Cargo.toml
sidecar/crates/config-store/: Cargo.toml
sidecar/crates/config-store/src/: lib.rs
sidecar/crates/provider-api/: Cargo.toml
sidecar/crates/provider-api/src/: lib.rs
sidecar/crates/provider-cloud-stub/: Cargo.toml
sidecar/crates/provider-cloud-stub/src/: lib.rs
sidecar/crates/provider-llama-cpp/: Cargo.toml
sidecar/crates/provider-llama-cpp/src/: lib.rs
sidecar/crates/provider-mock/: Cargo.toml
sidecar/crates/provider-mock/src/: lib.rs
sidecar/crates/sidecar-daemon/: Cargo.toml
sidecar/crates/sidecar-daemon/src/: main.rs
src/tip/EstraIme.Tip/: TipGuids.h  (+8 more)
tests/cpp-unit/: EstraIme.Engine.Tests.vcxproj  engine_tests.cpp
tests/fixtures/: llm_mock_response.json
tools/lexicon-builder/: Build-Lexicon.ps1  README.md  build_lexicon.py
(+303 files in other folders)
