[package]
name = "provider-llama-cpp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
provider-api = { path = "../provider-api" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
