[package]
name = "sidecar-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
config-store = { path = "../config-store" }
provider-api = { path = "../provider-api" }
provider-cloud-stub = { path = "../provider-cloud-stub" }
provider-llama-cpp = { path = "../provider-llama-cpp" }
provider-mock = { path = "../provider-mock" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
